crates/nirvash-macros/tests/fixtures/derive_signature_invalid_range.rs
use nirvash_macros::FiniteModelDomain;

#[derive(Clone, Debug, PartialEq, Eq, FiniteModelDomain)]
#[finite_model_domain(range = "0..=3")]
struct InvalidRange {
    lhs: u8,
    rhs: u8,
}

fn main() {}
